background attaachment fixed just on mobile

--- a/app/dash/css/dashboard.css
+++ b/app/dash/css/dashboard.css
@@ -229,28 +229,9 @@ hr{
 .tooltip-inner{
     font-family: 'Muli', cursiva;
 }
-@media only screen and (min-width : 992px)  {
+@media only screen and (min-width : 992px) and (-webkit-min-device-pixel-ratio: 2) {
     .challenge.many .challenge-image{
         background-attachment: fixed;
     }
 }
-/*
-@media screen and (max-device-width: 1024px){
-    .challenge.many .challenge-image:before{
-        content: "";
-        display: block;
-        position: fixed;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        z-index: -10;
-        background-positions: center center;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-    }
-}*/
-
 
